--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://rolnelh.github.io/JobConnect/">
+              <a href="https://rolnelh.github.io/job-connect/">
     
                 <figure class="project-img">
                   <div class="project-item-icon-box">
